Align fixes

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -24,3 +24,8 @@
 .kvadraturen_tittel {
   font-weight: bold;
 }
+//start of fjerdingen css
+
+#banner_fjerdingen {
+
+}
